main.css
/* Root styles */

*, *::before, *::after {
    box-sizing: border-box;
}

:root {
    /* Cell attributes. */
    --cell-size: 64px;
    /* Cell states. */
    --cell-hover: hsla(0, 0%, 0%, 0.1);
    --cell-selected: hsla(0, 0%, 0%, 0.2);
    --cell-source: hsla(0, 0%, 0%, 0.2);
    --cell-target: hsla(0, 0%, 0%, 0.2);
}

body {
    position: absolute;
    width: 100%; height: 100%;
    margin: 0;
    overflow: hidden;

    font-family: sans-serif;
}

/* Special elements */

.MathJax_SVG {
    outline: none;
}

.error-banner {
    position: fixed;
    width: 100%;
    left: 0; top: 0;
    z-index: 200;
    padding: 8px 0;

    background: hsl(0, 50%, 50%);
    color: white;

    text-align: center;

    user-select: none;

    transition: transform 0.2s;
}

.error-banner.hidden {
    transform: translateY(-100%);
}

.close {
    width: 28px; height: 28px;
    margin-left: 20px;

    background: transparent;
    border: none;
    border-radius: 100%;
    outline: none;

    text-align: center;
    color: white;
    font-size: 20px;
}

.close:hover {
    background: hsla(0, 0%, 100%, 0.2);
}

.close:active {
    background: hsla(0, 0%, 100%, 0.4);
}

.close::before {
    content: "×";
}

.logo {
    position: fixed;
    left: 16px; top: 16px;
    width: 100px;

    opacity: 0.5;
}

.logo:hover {
    opacity: 1;
}

/* The grid of cells */

.canvas {
    position: absolute;
    width: 100%; height: 100%;

    background-color: white;
    background-size: var(--cell-size) var(--cell-size);
}

.pan .canvas {
    cursor: grab;
}

.pan .canvas:active {
    cursor: grabbing;
}

/* Grid interaction */

.insertion-point {
    display: block;
    position: absolute;
    width: var(--cell-size); height: var(--cell-size);
    transform: translate(-50%, -50%);

    background: hsla(0, 0%, 0%, 0);

    text-align: center;
    font: 16px sans-serif;
    line-height: var(--cell-size);
    color: hsla(0, 0%, 0%, 0.4);
}

.insertion-point.revealed {
    background: hsla(0, 0%, 0%, 0.1);
}

.insertion-point::before {
    content: "Add vertex";
    visibility: hidden;
}

.insertion-point.active::before {
    content: "Add edge";
}

.insertion-point.revealed::before {
    visibility: visible;
}

/* Vertices */

.vertex {
    position: absolute;
    width: var(--cell-size); height: var(--cell-size);
    transform: translate(-50%, -50%);
}

.ui.default .vertex {
    cursor: move;
}

.vertex .content {
    position: absolute;
    width: calc(var(--cell-size) / 2); height: calc(var(--cell-size) / 2);
    left: calc(var(--cell-size) / 2); top: calc(var(--cell-size) / 2);
    transform: translate(-50%, -50%);

    border-radius: 100%;

    text-align: center;
}

.ui.default .vertex .content {
    cursor: default;
}

/* This is so explicit because of the CSS specificity rules. */
.ui.default .vertex:not(.selected):not(.source):not(.target) .content:hover {
    background: var(--cell-hover);
}

.vertex.source .content {
    background: var(--cell-source);
}

.vertex.target .content {
    background: var(--cell-target);
}

.vertex.selected .content {
    background: var(--cell-selected);
}

.label {
    display: block;
    position: absolute;
    left: 50%; top: 50%;
    transform: translate(-50%, -50%);

    text-align: center;
    font-family: inherit;
    font-size: 26px;
    white-space: nowrap;

    pointer-events: none;

    transition: opacity 0.2s;
}

.label.buffer {
    visibility: hidden;
}

.label.error {
    font: 22px monospace;
    color: hsl(0, 100%, 40%);
}

/* Edges */

.edge {
    position: absolute;
}

.edge.reconnecting {
    pointer-events: none;
}

.edge > svg {
    position: absolute;
    left: 50%; top: 50%;
    transform: translate(-50%, -50%);

    pointer-events: none;
}

/* The overlay edge drawn while connecting cells. */
.overlay {
    pointer-events: none;
}

/* This is so explicit because of the CSS specificity rules. */
.ui.default .edge:hover:not(.selected):not(.source):not(.target) svg.background {
    stroke: var(--cell-hover);
}

.edge.source svg.background {
    stroke: var(--cell-source);
}

.edge.target svg.background {
    stroke: var(--cell-target);
}

.edge.selected svg.background {
    stroke: var(--cell-selected);
}

.edge .label {
    font-size: 20px;
    text-align: right;
}

.edge .handle {
    display: none;
    position: absolute;
    width: 24px; height: 24px;
    top: 50%;
    transform: translateY(-50%);

    background: white;
    border-radius: 100%;
}

.edge .handle.source {
    left: 0;
}

.edge .handle.target {
    right: 0;
}

.ui.default .edge:hover .handle, .ui.default .edge.selected .handle {
    display: block;
}

.edge .handle:hover {
    border: hsl(200, 100%, 40%) 2px solid;
}

/* The side panel */

.panel {
    position: fixed;
    width: 20%; height: 100%;
    right: 0;
    z-index: 100;

    background: hsl(0, 0%, 20%);

    font: 14px sans-serif;
    color: hsl(0, 0%, 80%);
}

.panel .local {
    position: absolute;
    width: 100%; height: calc(100% - 114px);
    padding: 24px 16px;
    overflow: auto;

    border-bottom: hsl(0, 0%, 36%) solid 1px;
}

.panel input[type="text"] {
    padding: 2px 4px;

    background: hsl(0, 0%, 16%);
    border: hsl(0, 0%, 28%) solid 1px;
    border-radius: 2px;
    outline: none;

    font-size: inherit;
    font-family: monospace;
    color: hsl(0, 0%, 96%);
}

.panel input[type="text"]:hover {
    background: hsl(0, 0%, 18%);
}

.panel input[type="text"]:focus {
    background: hsl(0, 0%, 96%);
    border-color: hsl(200, 100%, 40%);

    color: hsl(0, 0%, 16%);
}

.panel input[type="text"]:disabled {
    background: hsl(0, 0%, 20%);
    border-color: hsl(0, 0%, 28%);
}

.panel input[type="text"].flash {
    animation: shadow-flash 0.2s;
}

@keyframes shadow-flash {
    from {
        box-shadow: 0 0 0 4px hsl(200, 100%, 40%);
    }

    to {
        box-shadow: 0 0 0 hsl(200, 100%, 40%);
    }
}

.panel .options {
    margin: 8px 0;

    text-align: center;
}
/* ... */

